Change in config application

--- a/src/config/app.yaml
+++ b/src/config/app.yaml
@@ -1,7 +1,3 @@
-default:
-  name_file: "default.ovpn"
-  path_file: "/opt/multivpn/keys"
-
-abc:
-  file_name: "ABC.ovpn"
-  path_file: "/opt/multivpn/keys"
+openvpn_linux: "/usr/sbin/openvpn"
+openvpn_windows: "C:\\Program Files\\OpenVPN\\bin\\openvpn.exe"
+path_keys: "/opt/multivpn/keys"
